@@ -4,7 +4,7 @@ sudo: required
 
 addons:
   firefox: "47.0.1"
-  postgresql: "9.3"
+  postgresql: "9.4"
   apt:
     packages:
       - oracle-java8-installer
@@ -16,13 +16,11 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.0
  - 7.1
 
 env:
  global:
-  - MOODLE_BRANCH=MOODLE_34_STABLE
-  - MOODLE_BRANCH=MOODLE_35_STABLE
+  - MOODLE_BRANCH=MOODLE_36_STABLE
  matrix:
   - DB=pgsql
   - DB=mysqli
@@ -48,6 +46,3 @@ script:
   - moodle-plugin-ci mustache
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
-
-notifications:
-  slack: learningworks-dev:tL8lF2CKqNGY6rdtxKhaXIiy
